force-app/main/default/objects/Pokemon_Ability__c/Pokemon_Ability__c.object-meta.xml
<CustomObject>
    <label>Pokemon Ability</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemon Abilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>