force-app/main/default/objects/Pokemon_Ability__c/fields/Is_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Is_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>