force-app/main/default/objects/Pokemon_Ability__c/fields/Slot__c.field-meta.xml
<CustomField>
    <fullName>Slot__c</fullName>
    <label>Slot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>